Changelog
=========

1.0b10 - unreleased
-------------------

1.0b9 - 2011-11-02
------------------

* Patch App.Management.Navigation to disable theming of ZMI pages.
  [elro]

1.0b8 - 2011-07-04
------------------

* Evaluate theme parameters regardless of whether there is a valid context or
  not (e.g. when templating a 404 page).
  [lentinj]

1.0b7 - 2011-06-12
------------------

* Moved the *views* and *overrides* plugins out into a separate package
  ``plone.app.themingplugins``. If you want to use those features, you need
  to install that package in your buildout. Themes attempting to register
  views or overrides in environments where ``plone.app.themingplugins`` is not
  installed will install, but views and overrides will not take effect.
  [optilude]

1.0b6 - 2011-06-08
------------------

* Support for setting arbitrary Doctypes.
  [elro]

* Upgrade step to update plone.app.registry configuration.
  [elro]

* Fixed plugin initialization when applying a theme.
  [maurits]

* Query the resource directory using the 'currentTheme' name instead
  of the Theme object (updating the control panel was broken).
  [maurits]

* Fix zip import (plugin initialization was broken.)
  [elro]

1.0b5 - 2011-05-29
------------------

* Make sure the control panel is never themed, by setting the X-Theme-Disabled
  response header.
  [optilude]

* Add support for registering new views from Zope Page Templates and 
  overriding existing templates. See README for more details.
  [optilude]

1.0b4 - 2011-05-24
------------------

* Add support for ``X-Theme-Disabled`` response header.
  [elro]

* Make "Replace existing theme" checkbox default to off.
  [elro]

* Fix control panel to correctly display a newly uploaded theme.
  [elro]

* Fix zip import to work correctly when no manifest is supplied.
  [elro]

1.0b3 - 2011-05-23
------------------

* Show theme name along with title in control panel.
  [elro]

1.0b2 - 2011-05-16
------------------
