@@ -4,6 +4,9 @@ Changelog
 1.0b10 - unreleased
 -------------------
 
+* Lookup portal state with correct context.
+  [elro]
+
 1.0b9 - 2011-11-02
 ------------------
 
